corrected logic to fetch hotel details using reservation