@@ -1,12 +1,10 @@
 package com.nivara.reservation_service.mapper;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import com.nivara.reservation_service.model.dto.ReservationDTO;
 import com.nivara.reservation_service.model.dto.ReservationItemDTO;
 import com.nivara.reservation_service.model.entity.Reservation;
-import com.nivara.reservation_service.model.entity.ReservationItem;
 
 // Immutable class
 public final class ReservationMapper {
@@ -14,32 +12,24 @@ public final class ReservationMapper {
     private ReservationMapper() {}
 
     public static ReservationDTO toDto(Reservation reservation) {
-        List<ReservationItemDTO> reservedItems = reservation.getReservationItems().stream()
-            .map(ReservationMapper::itemToDto)
-            .collect(Collectors.toList());
+        List<ReservationItemDTO> reservedItems = reservation.getReservationItems()
+            .stream()
+            .map(item -> new ReservationItemDTO(item.getRoomTypeId(), item.getQuantity(), item.getRate()))
+            .toList();
 
-        return new ReservationDTO(
-            reservation.getId(),
-            reservation.getHotelId(),
-            reservation.getCheckInDate(),
-            reservation.getCheckOutDate(),
-            reservedItems,
-            reservation.getAmount(),
-            reservation.getCurrency(),
-            reservation.getHoldId(),
-            reservation.getExpiresAt(),
-            reservation.getStatus(),
-            reservation.getCreatedAt(),
-            reservation.getUpdatedAt()
-        );     
-    }
-
-    private static ReservationItemDTO itemToDto(ReservationItem item) {
-        return new ReservationItemDTO(
-            item.getRoomTypeId(),
-            item.getQuantity(),
-            item.getRate()
-        );
-
+        return ReservationDTO.builder()
+            .id(reservation.getId())
+            .hotelId(reservation.getHotelId())
+            .checkInDate(reservation.getCheckInDate())
+            .checkOutDate(reservation.getCheckOutDate())
+            .reservedItems(reservedItems)
+            .amount(reservation.getAmount())
+            .currency(reservation.getCurrency())
+            .holdId(reservation.getHoldId())
+            .expiresAt(reservation.getExpiresAt())
+            .status(reservation.getStatus())
+            .createdAt(reservation.getCreatedAt())
+            .updatedAt(reservation.getUpdatedAt())
+            .build();    
     }
 }
